feat: added better tmux config and theming

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,20 +1,39 @@
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'powerline/default/cyan'
+
+set-option -sa terminal-overrides ",xterm*:Tc"
+set -g mouse on
+
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
 set-option -g default-shell /bin/zsh
 
-set -g mouse on
-
-bind-key -n M-\( split-window -h
-bind-key -n M-\) split-window -v
+bind-key -n M-\[ split-window -h 
+bind-key -n M-\] split-window -v 
 
 bind-key -n M-S-Left select-pane -L
 bind-key -n M-S-Right select-pane -R
 bind-key -n M-S-Down select-pane -D
 bind-key -n M-S-Up select-pane -U
 
-bind-key Space last-pane
+
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+bind-key -n C-S-D kill-session
+
+bind-key -n C-M-\\ new-window
+bind-key -n C-M-PageUp new-window htop
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
@@ -26,3 +45,6 @@ setw -g mode-keys vi
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+
+
+run '~/.tmux/plugins/tpm/tpm'
